--- a/Graph-Guesser/index.html
+++ b/Graph-Guesser/index.html
@@ -16,11 +16,11 @@
       <p>Create new Graph</p>
       <div id= "buttons"></div>
     </div>
-    <input type="button" value="TrainAI" onclick="trainAI()">
-    <input type="button" value="noLoop" onclick="noLoop()">
-    <input type="button" value="loop" onclick="loop()">
-    <input type="button" value="Export AI" onclick="exportAI()">
-    <input type="button" value="Import Trained AI" onclick="importAI()">
+    <input type="button" class="btn" value="TrainAI" onclick="trainAI()">
+    <input type="button" class="btn" value="noLoop" onclick="noLoop()">
+    <input type="button" class="btn" value="loop" onclick="loop()">
+    <input type="button" class="btn" value="Export AI" onclick="exportAI()">
+    <input type="button" class="btn" value="Import Trained AI" onclick="importAI()">
     <script src="script.js"></script>
   </body>
 </html>
